# secnode

./: .gitignore  ARCHITECTURE.md  README.md  activate.sh  example.py  fix-deps.sh  pyproject.toml  setup-dev.sh  test_lightweight_mode.py  test_lightweight_pii.py  test_new_policies.py  test_pii_presidio.py
.kiro/specs/secnode-refactoring/: design.md  requirements.md  tasks.md
docs/: QUICKSTART.md  ROADMAP.md
examples/: decorator_example.py  wrapper_vs_decorator_comparison.py
secnode/: __init__.py  cloud.py  graph.py  messages.py  presets.py
secnode/policies/: __init__.py  builtin.py  core.py
secnode/utils/: __init__.py  common.py
slides/: ai-security-presentation.html  data_sources.md  index.html  index_with_sources.html  presentation.html  tricer-security-suite.html
tests/: conftest.py  test_all_policies.py  test_basic_policies.py  test_pii_policy.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_decorator.py  test_graph.py  test_messages.py  test_policies.py  test_presets.py  test_state.py
tests/utils/: __init__.py  fixtures.py  helpers.py
tricer_secnode/: __init__.py  cloud.py  graph.py  state.py
tricer_secnode/policies/: __init__.py  builtin.py
