[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secnode"
version = "0.1.0"
description = "Tricer SecNode: The Native Security Layer for AI Agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tricer.ai", email = "hello@tricer.ai"},
]
maintainers = [
    {name = "Tricer.ai", email = "hello@tricer.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["security", "ai", "agents", "langgraph", "guardrails", "policy"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "asyncio-compat>=0.1.0",
    "presidio-analyzer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
langgraph = [
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
]
examples = [
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/tricer-ai/secnode"
Documentation = "https://secnode.tricer.ai"
Repository = "https://github.com/tricer-ai/secnode"
"Bug Tracker" = "https://github.com/tricer-ai/secnode/issues"
Changelog = "https://github.com/tricer-ai/secnode/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tricer_secnode"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tricer_secnode"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"